--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   },
   "dependencies": {
     "next": "10.0.1",
+    "next-i18next": "^7.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.7",
+    "@types/react": "^16.9.56",
+    "typescript": "^4.0.5"
   }
 }
